[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Resources/HexaTheme.tres" type="Theme" id=3]
[ext_resource path="res://Textures/hexalema_blur.png" type="Texture" id=4]
[ext_resource path="res://Resources/BigFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/PanelStyle.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 8
use_filter = true
extra_spacing_char = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 22
extra_spacing_bottom = 11
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.760784 )
border_width_top = 32
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 12
expand_margin_top = 32.0
shadow_color = Color( 0, 0, 0, 0 )

[node name="MainMenu" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
texture = ExtResource( 4 )
stretch_mode = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -470.0
margin_right = 470.0
margin_bottom = 305.0
rect_pivot_offset = Vector2( 470, 152.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "MenuGameName"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -276.0
margin_top = -144.0
margin_right = 276.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 276, 52 )
custom_fonts/font = ExtResource( 5 )
text = "MenuPlayButton"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 166.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 5 )
text = "1.3.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTxt" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -580.0
margin_top = -504.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 3 )
text = "UpdateNudgeText"
align = 1
valign = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsCover" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.737255 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Options" type="Panel" parent="OptionsCover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -388.5
margin_top = -324.0
margin_right = 388.5
margin_bottom = 324.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ls" type="VBoxContainer" parent="OptionsCover/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -290.0
margin_right = 295.0
margin_bottom = 290.0
custom_constants/separation = 35

[node name="Title" type="Label" parent="OptionsCover/Options/ls"]
margin_right = 590.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "MenuOptionsTitle"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rules" type="Button" parent="OptionsCover/Options/ls"]
margin_top = 111.0
margin_right = 590.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 5 )
text = "MenuGameRules"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="OptionsCover/Options/ls"]
margin_top = 222.0
margin_right = 590.0
margin_bottom = 298.0
custom_fonts/font = ExtResource( 5 )
text = "MenuCredits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhatsNew" type="Button" parent="OptionsCover/Options/ls"]
margin_top = 333.0
margin_right = 590.0
margin_bottom = 409.0
custom_fonts/font = ExtResource( 5 )
text = "MenuWhatsNew"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="Button" parent="OptionsCover/Options/ls"]
modulate = Color( 1, 0.137255, 0.137255, 1 )
margin_top = 444.0
margin_right = 590.0
margin_bottom = 520.0
custom_fonts/font = ExtResource( 5 )
text = "MenuCloseGame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Languages" type="VBoxContainer" parent="OptionsCover"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -130.0
margin_right = 526.0
margin_bottom = 130.0
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true
}

[node name="cs" type="Button" parent="OptionsCover/Languages"]
margin_right = 478.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "Česky"

[node name="en" type="Button" parent="OptionsCover/Languages"]
margin_top = 92.0
margin_right = 478.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 5 )
text = "English"

[node name="nl" type="Button" parent="OptionsCover/Languages"]
margin_top = 184.0
margin_right = 478.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 5 )
text = "Nederlans"

[node name="MoreThings" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 24.0
margin_right = -23.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 49.5, 52 )
custom_fonts/font = ExtResource( 5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -775.0
margin_top = -361.5
margin_right = 775.0
margin_bottom = 361.5
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_fonts/title_font = SubResource( 6 )
custom_styles/panel = SubResource( 4 )
window_title = "MenuCredits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContent" type="ScrollContainer" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0068
margin_top = 21.4983
margin_right = -25.9932
margin_bottom = -18.5017
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ls" type="VBoxContainer" parent="Credits/ScrollContent"]
margin_right = 1510.0
margin_bottom = 919.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ThankYou" type="Label" parent="Credits/ScrollContent/ls"]
margin_right = 1498.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "CreditsThankYou"

[node name="sep1" type="HSeparator" parent="Credits/ScrollContent/ls"]
margin_top = 37.0
margin_right = 1498.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="Pixabay" type="Label" parent="Credits/ScrollContent/ls"]
margin_top = 55.0
margin_right = 1498.0
margin_bottom = 88.0
size_flags_horizontal = 3
text = "CreditsPixabay"

[node name="sep2" type="HSeparator" parent="Credits/ScrollContent/ls"]
margin_top = 92.0
margin_right = 1498.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="GDEngine" type="Label" parent="Credits/ScrollContent/ls"]
margin_top = 110.0
margin_right = 1498.0
margin_bottom = 143.0
size_flags_horizontal = 3
text = "CreditsGDEngine"

[node name="MITLicense" type="HBoxContainer" parent="Credits/ScrollContent/ls"]
margin_top = 147.0
margin_right = 1498.0
margin_bottom = 864.0

[node name="sep1" type="VSeparator" parent="Credits/ScrollContent/ls/MITLicense"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 8.0
margin_bottom = 717.0

[node name="Line" type="VSeparator" parent="Credits/ScrollContent/ls/MITLicense"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 717.0

[node name="sep2" type="VSeparator" parent="Credits/ScrollContent/ls/MITLicense"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 24.0
margin_right = 32.0
margin_bottom = 717.0

[node name="MITLicenseTxt" type="Label" parent="Credits/ScrollContent/ls/MITLicense"]
margin_left = 36.0
margin_right = 1498.0
margin_bottom = 717.0
size_flags_horizontal = 3
text = "Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2021 Godot Engine contributors (cf. AUTHORS.md).

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE."

[node name="sep3" type="HSeparator" parent="Credits/ScrollContent/ls"]
margin_top = 868.0
margin_right = 1498.0
margin_bottom = 882.0
size_flags_horizontal = 3

[node name="Freetype" type="Label" parent="Credits/ScrollContent/ls"]
margin_top = 886.0
margin_right = 1498.0
margin_bottom = 919.0
size_flags_horizontal = 3
text = "Portions of this software are copyright © 2021 The FreeType Project (www.freetype.org). All rights reserved."

[node name="WhatsNewTxt" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -775.0
margin_top = -361.5
margin_right = 775.0
margin_bottom = 361.5
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_fonts/title_font = SubResource( 6 )
custom_styles/panel = SubResource( 4 )
window_title = "MenuWhatsNew"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContent" type="ScrollContainer" parent="WhatsNewTxt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0068
margin_top = 21.4983
margin_right = -25.9932
margin_bottom = -18.5017
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ls" type="VBoxContainer" parent="WhatsNewTxt/ScrollContent"]
margin_right = 1510.0
margin_bottom = 683.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="130" type="Label" parent="WhatsNewTxt/ScrollContent/ls"]
margin_right = 1510.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "WhatsNew130"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PlayButton" to="." method="Play"]
[connection signal="pressed" from="OptionsCover/Options/ls/Rules" to="." method="Rules"]
[connection signal="pressed" from="OptionsCover/Options/ls/Credits" to="." method="Credits"]
[connection signal="pressed" from="OptionsCover/Options/ls/WhatsNew" to="." method="WhatsNew"]
[connection signal="pressed" from="OptionsCover/Options/ls/End" to="." method="Quit"]
[connection signal="pressed" from="MoreThings" to="." method="MoreThings"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
